# planetarylander

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  development_notes.md  lcov.info  readme.md
.github/workflows/: physics.yml  rocket.yml
physics/: Cargo.toml  lib.rs  main.rs  planets.rs
physics/src/: lib.rs  orbit.rs  planets.rs  utils.rs
rocket/: Cargo.toml  rocket_constraints.txt
rocket/src/: main.rs
rocket/src/hardware/: flight_controller.rs  mod.rs  rocket.rs
rocket/src/hardware/sensors/: altimeter.rs  inertial_platform.rs  mod.rs
src/rocket/: mod.rs
src/rocket/hardware/: mod.rs
utils/: Cargo.toml
utils/src/: _vec3d_f64.rs  fixed_point.rs  lib.rs  quaternion.rs  vec3d.rs
